# rate-limit-guard

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
docs/: config.example.toml
rate_limit_guard/: __init__.py  decorator.py  guard.py
tests/: config.py  conftest.py  test_async.py  test_decorator.py  test_sync.py
